added hosted hero image

--- a/css/creative.css
+++ b/css/creative.css
@@ -147,7 +147,7 @@ header.masthead {
   min-height: auto;
   text-align: center;
   color: white;
-  background-image: url("/Users/jaymaglione/Desktop/Misc/Gear/Websites/img/cameron-kirby-100946.jpg");
+  background-image: url("https://image.ibb.co/geAs8R/cameron_kirby_100946.jpg");
   background-position: center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
