--- a/css/creative.css
+++ b/css/creative.css
@@ -41,7 +41,7 @@ p {
   margin-bottom: 20px; }
 
 .bg-primary {
-  background-color: #F05F40 !important; }
+  background-color: #143C15 !important; }
 
 .bg-dark {
   color: white;
@@ -147,7 +147,7 @@ header.masthead {
   min-height: auto;
   text-align: center;
   color: white;
-  background-image: url("https://image.ibb.co/geAs8R/cameron_kirby_100946.jpg");
+  background-image: url('img/gearup_hero.jpg');
   background-position: center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
