--- a/css/creative.css
+++ b/css/creative.css
@@ -147,7 +147,7 @@ header.masthead {
   min-height: auto;
   text-align: center;
   color: white;
-  background-image: url('img/gearup_hero.jpg');
+  background-image: url("https://image.ibb.co/eQzHtR/gearup_hero.jpg");
   background-position: center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -166,9 +166,9 @@ header.masthead {
       text-transform: uppercase; }
     header.masthead .header-content .header-content-inner hr {
       margin: 30px auto; }
-    header.masthead .header-content .header-content-inner p {
-      font-size: 16px;
-      font-weight: 300;
+    header.masthead .header-content .header-content-inner h2 {
+      font-size: 40px;
+      font-weight: 600;
       margin-bottom: 50px;
       color: rgba(255, 255, 255, 0.7); }
   @media (min-width: 768px) {
