--- a/css/creative.css
+++ b/css/creative.css
@@ -87,10 +87,10 @@ body {
   #mainNav .navbar-brand {
     font-weight: 700;
     text-transform: uppercase;
-    color: #F05F40;
+    color: #143C15;
     font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif; }
     #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-      color: #f05f40; }
+      color: #143C15; }
   #mainNav .navbar-toggle {
     font-size: 12px;
     font-weight: 700;
@@ -104,10 +104,10 @@ body {
     color: #222222; }
     #mainNav .navbar-nav > li.nav-item > a.nav-link:focus:hover,
     #mainNav .navbar-nav > li.nav-item > a.nav-link:hover {
-      color: #F05F40; }
+      color: #143C15; }
     #mainNav .navbar-nav > li.nav-item > a.nav-link:focus.active,
     #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
-      color: #F05F40 !important;
+      color: #143C15 !important;
       background-color: transparent; }
       #mainNav .navbar-nav > li.nav-item > a.nav-link:focus.active:hover,
       #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
@@ -131,15 +131,15 @@ body {
         background-color: white; }
         #mainNav.navbar-shrink .navbar-brand {
           font-size: 16px;
-          color: #F05F40; }
+          color: #143C15; }
           #mainNav.navbar-shrink .navbar-brand:focus, #mainNav.navbar-shrink .navbar-brand:hover {
-            color: #f05f40; }
+            color: #143C15; }
         #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link,
         #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus {
           color: #222222; }
           #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:hover,
           #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus:hover {
-            color: #F05F40; } }
+            color: #143C15; } }
 
 header.masthead {
   position: relative;
@@ -298,8 +298,8 @@ header.masthead {
 
 .btn-primary {
   color: white;
-  border-color: #F05F40;
-  background-color: #F05F40; }
+  border-color: #143C15;
+  background-color: #143C15; }
   .btn-primary.focus, .btn-primary:focus {
     color: white;
     border-color: #a4270d;
@@ -327,16 +327,16 @@ header.masthead {
   fieldset[disabled] .btn-primary.focus,
   fieldset[disabled] .btn-primary:focus,
   fieldset[disabled] .btn-primary:hover {
-    border-color: #F05F40;
-    background-color: #F05F40; }
+    border-color: #143C15;
+    background-color: #143C15; }
   .btn-primary .badge {
-    color: #F05F40;
+    color: #143C15;
     background-color: white; }
 
     .btn-secondary {
       color: white;
-      border-color: #F05F40;
-      background-color: #F05F40; }
+      border-color: #143C15;
+      background-color: #143C15; }
       .btn-secondary.focus, .btn-secondary:focus {
         color: white;
         border-color: #a4270d;
@@ -364,10 +364,10 @@ header.masthead {
       fieldset[disabled] .btn-secondary.focus,
       fieldset[disabled] .btn-secondary:focus,
       fieldset[disabled] .btn-secondary:hover {
-        border-color: #F05F40;
-        background-color: #F05F40; }
+        border-color: #143C15;
+        background-color: #143C15; }
       .btn-secondary .badge {
-        color: #F05F40;
+        color: #143C15;
         background-color: white; }
 
 .btn {
