--- a/css/creative.css
+++ b/css/creative.css
@@ -14,18 +14,18 @@ body {
 hr {
   max-width: 50px;
   border-width: 3px;
-  border-color: #F05F40; }
+  border-color: #D9853A; }
 
 hr.light {
   border-color: white; }
 
 a {
-  color: #F05F40;
+  color: #D9853A;
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
   transition: all 0.2s; }
   a:focus, a:hover {
-    color: #f05f40; }
+    color: #D9853A; }
 
 h1,
 h2,
@@ -41,7 +41,7 @@ p {
   margin-bottom: 20px; }
 
 .bg-primary {
-  background-color: #143C15 !important; }
+  background-color: #555555 !important; }
 
 .bg-dark {
   color: white;
@@ -87,10 +87,10 @@ body {
   #mainNav .navbar-brand {
     font-weight: 700;
     text-transform: uppercase;
-    color: #143C15;
+    color: #D9853A;
     font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif; }
     #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-      color: #143C15; }
+      color: #D9853A; }
   #mainNav .navbar-toggle {
     font-size: 12px;
     font-weight: 700;
@@ -104,10 +104,10 @@ body {
     color: #222222; }
     #mainNav .navbar-nav > li.nav-item > a.nav-link:focus:hover,
     #mainNav .navbar-nav > li.nav-item > a.nav-link:hover {
-      color: #143C15; }
+      color: #D9853A; }
     #mainNav .navbar-nav > li.nav-item > a.nav-link:focus.active,
     #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
-      color: #143C15 !important;
+      color: #D9853A !important;
       background-color: transparent; }
       #mainNav .navbar-nav > li.nav-item > a.nav-link:focus.active:hover,
       #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
@@ -131,15 +131,15 @@ body {
         background-color: white; }
         #mainNav.navbar-shrink .navbar-brand {
           font-size: 16px;
-          color: #143C15; }
+          color: #D9853A; }
           #mainNav.navbar-shrink .navbar-brand:focus, #mainNav.navbar-shrink .navbar-brand:hover {
-            color: #143C15; }
+            color: #D9853A; }
         #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link,
         #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus {
           color: #222222; }
           #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:hover,
           #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus:hover {
-            color: #143C15; } }
+            color: #D9853A; } }
 
 header.masthead {
   position: relative;
@@ -253,7 +253,7 @@ header.masthead {
     margin: 0 auto 20px; }
 
 .text-primary {
-  color: #F05F40 !important; }
+  color: #555555 !important; }
 
 .no-gutter > [class*='col-'] {
   padding-right: 0;
@@ -298,8 +298,8 @@ header.masthead {
 
 .btn-primary {
   color: white;
-  border-color: #143C15;
-  background-color: #143C15; }
+  border-color: #D9853A;
+  background-color: #D9853A; }
   .btn-primary.focus, .btn-primary:focus {
     color: white;
     border-color: #a4270d;
@@ -327,16 +327,16 @@ header.masthead {
   fieldset[disabled] .btn-primary.focus,
   fieldset[disabled] .btn-primary:focus,
   fieldset[disabled] .btn-primary:hover {
-    border-color: #143C15;
-    background-color: #143C15; }
+    border-color: #D9853A;
+    background-color: #D9853A; }
   .btn-primary .badge {
-    color: #143C15;
+    color: #D9853A;
     background-color: white; }
 
     .btn-secondary {
       color: white;
-      border-color: #143C15;
-      background-color: #143C15; }
+      border-color: #D9853A;
+      background-color: #D9853A; }
       .btn-secondary.focus, .btn-secondary:focus {
         color: white;
         border-color: #a4270d;
@@ -364,10 +364,10 @@ header.masthead {
       fieldset[disabled] .btn-secondary.focus,
       fieldset[disabled] .btn-secondary:focus,
       fieldset[disabled] .btn-secondary:hover {
-        border-color: #143C15;
-        background-color: #143C15; }
+        border-color: #D9853A;
+        background-color: #D9853A; }
       .btn-secondary .badge {
-        color: #143C15;
+        color: #D9853A;
         background-color: white; }
 
 .btn {
